--- a/the-coopers-inn/linux/builder-php.hm.yml
+++ b/the-coopers-inn/linux/builder-php.hm.yml
@@ -41,12 +41,9 @@ jobs:
           find hooks/10-pre-build.d "$PIPELINE"/hooks/10-pre-build.d -type f -perm -u+x -execdir sh -c '"$0"' {} \; 2>/dev/null || true
 
       - name: Select composer binary
+        if: contains(env.files, 'beethoven.sh')
         run: |
-          set -euo pipefail
-          PIPELINE='${{ inputs.pipeline }}'
-          if echo "${files:-}" | grep -qx ".*${PIPELINE}/beethoven.sh"; then
-            echo "COMPOSER_BIN=${PIPELINE}/beethoven.sh" >> "$GITHUB_ENV"
-          fi
+          echo "COMPOSER_BIN=${{ inputs.pipeline }}/beethoven.sh" >> "$GITHUB_ENV"
 
       - name: composer install
         env:
