chore(php): run composer in working-directory set to pipeline
💘 Generated with Crush
Co-Authored-By: Crush <crush@charm.land>

--- a/the-coopers-inn/linux/builder-php.hm.yml
+++ b/the-coopers-inn/linux/builder-php.hm.yml
@@ -48,16 +48,18 @@ jobs:
       - name: composer install
         env:
           COMPOSER_BIN: ${{ env.COMPOSER_BIN || 'composer' }}
+        working-directory: ${{ inputs.pipeline }}
         run: |
           set -euo pipefail
-          "$COMPOSER_BIN" --working-dir "${{ inputs.pipeline }}" install --no-interaction --no-progress
+          "$COMPOSER_BIN" install --no-interaction --no-progress
 
       - name: composer test
         env:
           COMPOSER_BIN: ${{ env.COMPOSER_BIN || 'composer' }}
+        working-directory: ${{ inputs.pipeline }}
         run: |
           set -euo pipefail
-          "$COMPOSER_BIN" --working-dir "${{ inputs.pipeline }}" test || true
+          "$COMPOSER_BIN" test || true
 
       - name: Post-build hooks
         run: |
