chore(php): set COMPOSER_BIN to beethoven.sh without pipeline prefix (cwd is pipeline)
💘 Generated with Crush
Co-Authored-By: Crush <crush@charm.land>

--- a/the-coopers-inn/linux/builder-php.hm.yml
+++ b/the-coopers-inn/linux/builder-php.hm.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Select composer binary
         if: contains(env.files, 'beethoven.sh')
         run: |
-          echo "COMPOSER_BIN=${{ inputs.pipeline }}/beethoven.sh" >> "$GITHUB_ENV"
+          echo "COMPOSER_BIN=beethoven.sh" >> "$GITHUB_ENV"
 
       - name: composer install
         env:
