feat(watchman): export HARBOUR_ROOT pointing to $GITHUB_WORKSPACE
💘 Generated with Crush
Co-Authored-By: Crush <crush@charm.land>

--- a/the-lighthouse-inn/watchman-linus.hm.yml
+++ b/the-lighthouse-inn/watchman-linus.hm.yml
@@ -72,6 +72,7 @@ jobs:
           cat <<"VARS" | tee -a $GITHUB_ENV
           BRANCH=$BRANCH
           BRANCH_CONFIG=${BRANCH%%/*}.branch.env
+          HARBOUR_ROOT=$GITHUB_WORKSPACE
           PIPELINE=$PIPELINE
           files="$(ls $PIPELINE || echo '')"
           VARS
