--- a/the-lighthouse-inn/watchman-retired.hm.yml
+++ b/the-lighthouse-inn/watchman-retired.hm.yml
@@ -11,8 +11,8 @@ jobs:
     name: Get Changed Pipelines
     runs-on: ubuntu-24.04
     outputs:
-      matrix: ${{ steps.spotting.outputs.matrix }}
-    steps:
+      matrix: ${{ steps.spotting.outputs.matrix }}    steps:
+
       - uses: actions/checkout@v4
         with:
           fetch-depth: ${{ github.event_name == 'pull_request' && 2 || 0 }}
@@ -80,8 +80,8 @@ jobs:
     runs-on: ${{ matrix.runner }}
     permissions:
       id-token: write
-      contents: read
-    steps:
+      contents: read    steps:
+    
       - name: checkout
         uses: actions/checkout@v4
 
