--- a/the-lighthouse-inn/watchman-linus.hm.yml
+++ b/the-lighthouse-inn/watchman-linus.hm.yml
@@ -1,7 +1,7 @@
 ---
 name: Watchman-Bob
 
-true:
+on:
   push:
     branches:
     - main
@@ -16,7 +16,8 @@ jobs:
     name: Get Changed Pipelines
     runs-on: ubuntu-24.04
     outputs:
-      matrix: "${{ steps.spotting.outputs.matrix }}"    steps:
+      matrix: "${{ steps.spotting.outputs.matrix }}"
+    steps:
 
     - uses: actions/checkout@v4
       with:
