chore: sync changes

--- a/the-coopers-inn/linux/builder-gradle.hm.yml
+++ b/the-coopers-inn/linux/builder-gradle.hm.yml
@@ -16,6 +16,7 @@ true:
 jobs:
   build:
     runs-on: "${{ inputs.runner || 'ubuntu-24.04' }}"
+
     steps:
 
     - uses: actions/checkout@v4
@@ -25,9 +26,9 @@ jobs:
     - name: Import env
       env:
         env_json: "${{ inputs.env_json }}"
-      run: 'echo "$env_json" | jq -r ''to_entries[]|"\(.key)=\(.value)"'' >> "$GITHUB_ENV"
-
-        '
+      run: |
+        set -euo pipefail
+        echo "$env_json" | jq -r ''to_entries[]|"\(.key)=\(.value)"'' >> "$GITHUB_ENV"
 
     - name: Pre-build hooks
       working-directory: "${{ inputs.pipeline }}"
