--- a/the-coopers-inn/linux/builder-compose.hm.yml
+++ b/the-coopers-inn/linux/builder-compose.hm.yml
@@ -1,4 +1,4 @@
----
+
 name: Builder-Compose
 
 on:
@@ -25,7 +25,9 @@ jobs:
     - name: Import env
       env:
         env_json: "${{ inputs.env_json }}"
-      run: 'echo "$env_json" | jq -r ''to_entries[]|"\(.key)=\(.value)"'' >> "$GITHUB_ENV"
+      run: |
+        set -euo pipefail
+        echo "$env_json" | jq -r ''to_entries[]|"\(.key)=\(.value)"'' >> "$GITHUB_ENV"
 
     - name: Pre-build hooks
       run: |
